update_methods_DTO